# adi-imu-driver

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt  adi_imu_common.h.in
lib/imu/: CMakeLists.txt  adi_imu_driver.c
lib/imu_buf/: CMakeLists.txt
linux/: CMakeLists.txt  spi_driver.c  uart_driver.h
tests/: CMakeLists.txt
